# rivora

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEX.md  CONTRIBUTING.md  CRATES.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  clippy.toml  deny.toml  rustfmt.toml
crates/rivora/: Cargo.toml
crates/rivora-adaptive/: Cargo.toml
crates/rivora-adaptive/src/: lib.rs
crates/rivora-cli/: Cargo.toml
crates/rivora-cli/src/: demo_fixtures.rs  doctor.rs  lib.rs  main.rs  slack_adapter.rs
crates/rivora-cli/tests/: cli_smoke.rs  entry_routing.rs  v0_4_proposal_cli.rs  v0_5_learning_cli.rs  v0_6_execution_cli.rs  v0_7_lifecycle_cli.rs  v0_8_coverage_cli.rs
crates/rivora-config/: Cargo.toml
crates/rivora-config/src/: config.rs  lib.rs  loader.rs  secret.rs  validation.rs
crates/rivora-config/tests/: config_env.rs  config_integration.rs
crates/rivora-connectors/: Cargo.toml
crates/rivora-connectors/src/: cloudflare.rs  execution.rs  git.rs  github.rs  github_actions.rs  kubernetes.rs  lib.rs  local.rs  planetscale.rs  resilience.rs  sentry.rs  vercel.rs
crates/rivora-core/: Cargo.toml
crates/rivora-core/src/: id.rs  lib.rs  logging.rs  version.rs
crates/rivora-core/tests/: core_integration.rs
crates/rivora-errors/: Cargo.toml
crates/rivora-errors/src/: kind.rs  lib.rs
crates/rivora-errors/tests/: error_integration.rs
crates/rivora-examples/: Cargo.toml
crates/rivora-examples/examples/: config_loading.rs  error_handling.rs  logging.rs  typed_ids.rs
crates/rivora-memory/: Cargo.toml
crates/rivora-memory/src/: builders.rs  confidence.rs  feedback.rs  fixtures.rs  index.rs  kind.rs  lib.rs  metadata.rs  provenance.rs  recall.rs  record.rs  retention.rs  scope.rs  snapshot.rs  source.rs  status.rs  validation.rs
crates/rivora-memory/tests/: golden_tests.rs  serde_tests.rs
crates/rivora-memory/tests/snapshots/: golden_tests__golden_ability_learning_memory_json.snap  golden_tests__golden_deployment_learning_memory_json.snap  golden_tests__golden_expired_memory_json.snap  golden_tests__golden_incident_learning_memory_json.snap  golden_tests__golden_invalid_memory_validation_error.snap  golden_tests__golden_organization_fact_json.snap  golden_tests__golden_receipt_learning_memory_json.snap  golden_tests__golden_sample_index_json.snap  golden_tests__golden_service_relationship_memory_json.snap  golden_tests__golden_superseded_memory_json.snap
crates/rivora-receipts/: Cargo.toml
crates/rivora-receipts/src/: action.rs  builders.rs  confidence.rs  evidence.rs  fixtures.rs  kind.rs  lib.rs  metadata.rs  reasoning.rs  receipt.rs  renderers.rs  risk.rs  status.rs  subject.rs  validation.rs
crates/rivora-receipts/tests/: golden_tests.rs  serde_tests.rs
crates/rivora-receipts/tests/snapshots/: golden_tests__golden_ability_run_receipt_json.snap  golden_tests__golden_ability_run_receipt_markdown.snap  golden_tests__golden_deployment_review_receipt_json.snap  golden_tests__golden_deployment_review_receipt_markdown.snap  golden_tests__golden_human_feedback_recorded_receipt_json.snap  golden_tests__golden_human_feedback_recorded_receipt_markdown.snap  golden_tests__golden_incident_explanation_receipt_json.snap  golden_tests__golden_incident_explanation_receipt_markdown.snap  golden_tests__golden_invalid_receipt_json.snap  golden_tests__golden_invalid_receipt_markdown.snap  golden_tests__golden_invalid_receipt_validation_error.snap  golden_tests__golden_memory_approved_receipt_json.snap  golden_tests__golden_memory_approved_receipt_markdown.snap  golden_tests__golden_memory_candidate_created_receipt_json.snap  golden_tests__golden_memory_candidate_created_receipt_markdown.snap  golden_tests__golden_observation_receipt_json.snap  golden_tests__golden_observation_receipt_markdown.snap  golden_tests__golden_recall_result_receipt_json.snap  golden_tests__golden_recall_result_receipt_markdown.snap  golden_tests__golden_recommendation_receipt_json.snap  golden_tests__golden_recommendation_receipt_markdown.snap
crates/rivora-slack/: Cargo.toml
crates/rivora-slack/src/: lib.rs
crates/rivora-testing/: Cargo.toml
crates/rivora-testing/src/: fixtures.rs  lib.rs  mock.rs  mock_traits.rs  property.rs  snapshot.rs  tempfs.rs
crates/rivora-testing/tests/: testing_integration.rs
crates/rivora-traits/: Cargo.toml
crates/rivora-traits/src/: clock.rs  connector.rs  health.rs  idgen.rs  inference.rs  lib.rs  logger.rs  receipt.rs  storage.rs
crates/rivora-traits/tests/: contract_tests.rs
crates/rivora-types/: Cargo.toml
crates/rivora-types/src/: id.rs  lib.rs  text.rs  version.rs
crates/rivora-types/tests/: types_integration.rs
crates/rivora-workspace/: Cargo.toml
crates/rivora-workspace/src/: agent_handoff.rs  error_view.rs  launch.rs  lib.rs  main.rs  smoke.rs
crates/rivora-workspace/src/actions/: mod.rs  registry.rs
crates/rivora-workspace/src/app/: mod.rs  state.rs  update.rs
crates/rivora-workspace/src/conversation/: message.rs  mod.rs
crates/rivora-workspace/src/effects/: mod.rs
crates/rivora-workspace/src/intent/: execute.rs  interpreter.rs  mod.rs  model.rs
crates/rivora-workspace/src/persistence/: mod.rs
crates/rivora-workspace/src/terminal/: guard.rs  mod.rs
crates/rivora-workspace/src/ui/: mod.rs  theme.rs
crates/rivora-workspace/tests/: async_confirmation_terminal.rs  shared_launcher.rs  v0_10_unified_workspace.rs  workspace_smoke.rs
crates/rivora/src/: error.rs  lib.rs
crates/rivora/src/capabilities/: mod.rs
crates/rivora/src/domain/: assistance.rs  (+22 more)
crates/rivora/tests/: architecture.rs  e2e_shared_capabilities.rs  phase1_runtime.rs  phase2_reasoning.rs  v0_2_context.rs  v0_2_graph.rs  v0_2_search.rs  v0_3_assistance.rs  v0_3_connectors_e2e.rs  v0_3_workflows.rs  v0_4_end_to_end.rs  v0_4_proposal_artifacts.rs  v0_4_proposal_generation.rs  v0_4_proposal_lifecycle.rs  v0_4_proposal_model.rs  v0_5_end_to_end.rs  v0_5_implementation_model.rs  v0_5_outcome_lifecycle.rs  v0_6_end_to_end.rs  v0_6_execution_model.rs  v0_6_hardening.rs  v0_6_rollback.rs  v0_7_engineering_loop.rs  v0_8_capability_coverage.rs  v0_9_production_hardening.rs
(+148 files in other folders)
