[workspace]
resolver = "2"
members = [
    "crates/rivora-errors",
    "crates/rivora-types",
    "crates/rivora-core",
    "crates/rivora-config",
    "crates/rivora-traits",
    "crates/rivora-testing",
    "crates/rivora-receipts",
    "crates/rivora-graph",
    "crates/rivora-memory",
    "crates/rivora-adaptive",
    "crates/rivora-slack",
    "crates/rivora-cli",
    "crates/rivora-connectors",
    "crates/rivora-examples",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
publish = false
authors = ["Rivora Contributors"]
repository = "https://github.com/rivora-dev/rivora"
homepage = "https://github.com/rivora-dev/rivora"

[workspace.dependencies]
# External
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.23", features = ["v4"] }
semver = "1.0"
thiserror = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
insta = "1.0"
tempfile = "3"
proptest = "1.0"

# Internal
rivora-errors = { path = "crates/rivora-errors", version = "0.1.0" }
rivora-types = { path = "crates/rivora-types", version = "0.1.0" }
rivora-core = { path = "crates/rivora-core", version = "0.1.0" }
rivora-traits = { path = "crates/rivora-traits", version = "0.1.0" }
rivora-config = { path = "crates/rivora-config", version = "0.1.0" }
rivora-testing = { path = "crates/rivora-testing", version = "0.1.0" }
rivora-receipts = { path = "crates/rivora-receipts", version = "0.1.0" }
rivora-graph = { path = "crates/rivora-graph", version = "0.1.0" }
rivora-memory = { path = "crates/rivora-memory", version = "0.1.0" }
rivora-adaptive = { path = "crates/rivora-adaptive", version = "0.1.0" }
rivora-slack = { path = "crates/rivora-slack", version = "0.1.0" }
rivora-cli = { path = "crates/rivora-cli", version = "0.1.0" }
rivora-connectors = { path = "crates/rivora-connectors", version = "0.1.0" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = "thin"
