[workspace]
resolver = "2"
members = [
    "crates/rivora",
    "crates/rivora-connectors",
    "crates/rivora-cli",
    "crates/rivora-workspace",
]
default-members = [
    "crates/rivora",
    "crates/rivora-connectors",
    "crates/rivora-cli",
    "crates/rivora-workspace",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rivora-ai/rivora"
rust-version = "1.75"

[workspace.dependencies]
rivora = { path = "crates/rivora" }
rivora-connectors = { path = "crates/rivora-connectors" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
dialoguer = "0.11"
console = "0.15"
