[package]
name = "rivora-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Local-first adaptive reliability memory CLI for Open Rivora"
keywords = ["reliability", "memory", "devops", "incident-response"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rivora"
path = "src/main.rs"

[dependencies]
rivora-adaptive = { workspace = true }
rivora-connectors = { workspace = true }
rivora-errors = { workspace = true }
rivora-memory = { workspace = true }
rivora-receipts = { workspace = true }
rivora-slack = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tungstenite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
