[package]
name = "rivora-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Configuration loading (files + environment) and validation for Open Rivora"

[dependencies]
rivora-types = { workspace = true }
rivora-errors = { workspace = true }
rivora-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
