[package]
name = "rivora-examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Small executable examples demonstrating the Open Rivora foundation"
autotests = false
autoexamples = true

[dependencies]
rivora-types = { workspace = true }
rivora-core = { workspace = true }
rivora-errors = { workspace = true }
rivora-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
