[package]
name = "rivora-receipts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Typed reliability receipt schema, validation, and rendering for Open Rivora"

[dependencies]
rivora-errors = { workspace = true }
rivora-types = { workspace = true }
rivora-core = { workspace = true }
rivora-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rivora-testing = { workspace = true }
insta = { workspace = true }
