[package]
name = "rivora-testing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared testing infrastructure for Open Rivora (fixtures, snapshots, temp fs, property, mocks)"

[dependencies]
rivora-types = { workspace = true }
rivora-core = { workspace = true }
rivora-errors = { workspace = true }
rivora-config = { workspace = true }
rivora-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
