[package]
name = "rivora-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Domain-agnostic typed primitives for Open Rivora (typed IDs, versions, text)"

[dependencies]
rivora-errors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
semver = { workspace = true }
