[package]
name = "rivora-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rivora Workspace — primary interactive Investigation experience"
rust-version.workspace = true

[lib]
name = "rivora_workspace"
path = "src/lib.rs"

[[bin]]
name = "rivora-workspace"
path = "src/main.rs"

[dependencies]
rivora = { workspace = true }
rivora-connectors = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
